--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -12,41 +12,43 @@
     <link rel="stylesheet" href="../css/shards.min.css">
 </head>
 <body>
-<div class="container my-5">
+<div class="container my-5" th:if="${productList.isEmpty()}">
     <div class="row">
         <div class="col-md-6">
-            <h2 >No Product yet!</h2> <!-- todo check product list size, if it is 0, it always prints No product yet-->
-
-            <div ><!-- todo check product list size, if it is NOT 0, it will show the created products-->
-                <h2 class="my-5">Products</h2>
-                <table class="table table-striped table-responsive-md">
-                    <thead>
-                    <tr>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>RemainingQuantity</th>
-                        <th>Add To Cart</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr > <!-- todo productList-->
-                        <td ></td><!-- todo product variables-->
-                        <td ></td><!-- todo product variables-->
-                        <td ></td><!-- todo product variables-->
-                        <td>
-                            <a class="btn btn-primary">Add Cart<i></i></a> <!-- todo a href with two path variables-->
-                        </td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-
-            <p class="my-5"><a class="btn btn-primary">Create Product<i
-                    class="fas fa-user-plus ml-2"></i></a></p> <!-- todo create product form page url-->
-            <p class="my-5"><a class="btn btn-primary">See Cart<i class="fas fa-user-plus ml-2"></i></a> <!-- todo cart url-->
-            </p>
+            <h2>No Product yet!</h2>
         </div>
     </div>
 </div>
+<div class="container my-5" th:unless="${productList.isEmpty()}">
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class="my-5">Products</h2>
+            <table class="table table-striped table-responsive-md">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Price</th>
+                    <th>Remaining Quantity</th>
+                    <th>Add To Cart</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="product : ${productList}">
+                    <td th:text="${product.name}"></td>
+                    <td th:text="${product.price}"></td>
+                    <td th:text="${product.remainingQuantity}"></td>
+                    <td>
+                        <a class="btn btn-primary">Add To Cart <i class="fas fa-cart-plus"></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
+<p class="my-5"><a class="btn btn-primary">Create Product <i class="fas fa-user-plus ml-2"></i></a></p>
+<p class="my-5"><a class="btn btn-primary">See Cart <i class="fas fa-shopping-cart ml-2"></i></a></p>
+
 </body>
 </html>
