--- a/src/main/resources/templates/product/create-product.html
+++ b/src/main/resources/templates/product/create-product.html
@@ -16,21 +16,21 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    <form method="post"> <!-- todo post action with thymeleaf-->
+                    <form method="post" th:object="${product}"> <!-- todo post action with thymeleaf-->
                         <div class="row">
                             <div class="form-group blu-margin" th:class="'form-group'">
                                 <label>Name</label>
-                                <input type="text" placeholder="name">  <!-- todo name attribute-->
+                                <input type="text" th:field="*{name}" placeholder="name">  <!-- todo name attribute-->
                             </div>
 
                             <div class="form-group blu-margin" th:class="'form-group'">
                                 <label >Price</label>
-                                <input type="number" placeholder="price"> <!-- todo price attribute-->
+                                <input type="number" th:field="*{price}" placeholder="price"> <!-- todo price attribute-->
                             </div>
 
                             <div class="form-group blu-margin" th:class="'form-group'">
                                 <label >RemainingQuantity</label>
-                                <input type="number" placeholder="remainingQuantity"> <!-- todo remainingQuantity attribute-->
+                                <input type="number" th:field="*{remainingQuantity}"placeholder="remainingQuantity"> <!-- todo remainingQuantity attribute-->
                             </div>
                         </div>
                         <div class="row">
