--- a/src/main/resources/templates/cart/show-cart.html
+++ b/src/main/resources/templates/cart/show-cart.html
@@ -13,11 +13,11 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <h2 >No Added Product Yet!</h2>  <!-- todo check cart item list size, if it is 0, it always print No Added Product Yet-->
+            <h2 th:if="${cartItemList.isEmpty()}">No Added Product Yet!</h2>  <!-- todo check cart item list size, if it is 0, it always print No Added Product Yet-->
             <h3> Cart Total Amount</h3>
             <td ></td>  <!-- todo put cart total amount cart.getCartTotalAmount()-->
 
-            <div > <!-- todo check cart item list size, if it is NOT 0, it will show added products-->
+            <div th:unless="${cartItemList.isEmpty()}"> <!-- todo check cart item list size, if it is NOT 0, it will show added products-->
                 <h2 class="my-5"></h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
@@ -38,7 +38,7 @@
                     </tbody>
                 </table>
             </div>
-            <p class="my-5"><a class="btn btn-primary">See Product List<i></i></a></p> <!-- todo see product list page-->
+            <p class="my-5"><a class="btn btn-primary"th:href="@{/list}">See Product List<i></i></a></p> <!-- todo see product list page-->
 
         </div>
     </div>
