--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -43,7 +43,7 @@
 
             <p class="my-5"><a class="btn btn-primary"th:href="@{/create-form}">Create Product<i
                     class="fas fa-user-plus ml-2"></i></a></p> <!-- todo create product form page url-->
-            <p class="my-5"><a class="btn btn-primary">See Cart<i class="fas fa-user-plus ml-2"></i></a> <!-- todo cart url-->
+            <p class="my-5"><a class="btn btn-primary"th:href="@{/cart}">See Cart<i class="fas fa-user-plus ml-2"></i></a> <!-- todo cart url-->
             </p>
         </div>
     </div>
