--- a/src/main/resources/templates/cart/show-cart.html
+++ b/src/main/resources/templates/cart/show-cart.html
@@ -13,11 +13,11 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <h2 th:if="${cartItemList.isEmpty()}">No Added Product Yet!</h2>  <!-- todo check cart item list size, if it is 0, it always print No Added Product Yet-->
+            <h2 th:if="${cart.getCartItemList().size() ==0 }">No Added Product Yet!</h2>  <!-- todo check cart item list size, if it is 0, it always print No Added Product Yet-->
             <h3> Cart Total Amount</h3>
             <td th:text="${cart.getCartTotalAmount()}"></td>  <!-- todo put cart total amount cart.getCartTotalAmount()-->
 
-            <div th:unless="${cartItemList.isEmpty()}"> <!-- todo check cart item list size, if it is NOT 0, it will show added products-->
+            <div th:unless="${cart.getCartItemList().size() ==0}"> <!-- todo check cart item list size, if it is NOT 0, it will show added products-->
                 <h2 class="my-5"></h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
@@ -29,11 +29,11 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
-                        <td ></td> <!-- todo product variables-->
-                        <td ></td><!-- todo product variables-->
-                        <td ></td><!-- todo product variables-->
-                        <td><a>Delete From Cart</a></td> <!-- todo implement delete get request-->
+                    <tr th:each="eachItem : ${cart.getCartItemList()}">
+                        <td th:text="${eachItem.getProduct().getName()}"></td> <!-- todo product variables-->
+                        <td th:text="${eachItem.getQuantity()}"></td><!-- todo product variables-->
+                        <td th:text="${eachItem.getTotalAmount()}"></td><!-- todo product variables-->
+                        <td><a th:href="@{/delete/{productId}(productId=${eachItem.getProduct().id})}">Delete From Cart</a></td> <!-- todo implement delete get request-->
                     </tr>
                     </tbody>
                 </table>
