--- a/src/main/resources/templates/product/create-product.html
+++ b/src/main/resources/templates/product/create-product.html
@@ -16,7 +16,7 @@
             <div class="row">
                 <div class="col-md-3">
 
-                    <form method="post" th:object="${product}"> <!-- todo post action with thymeleaf-->
+                    <form method="post" th:action="@{/create-product}" th:object="${product}"> <!-- todo post action with thymeleaf-->
                         <div class="row">
                             <div class="form-group blu-margin" th:class="'form-group'">
                                 <label>Name</label>
