--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -15,9 +15,9 @@
 <div class="container my-5">
     <div class="row">
         <div class="col-md-6">
-            <h2 th:if="${productList.isEmpty()}" >No Product yet!</h2> <!-- todo check product list size, if it is 0, it always prints No product yet-->
+            <h2 th:if="${productList.size() ==0}" >No Product yet!</h2> <!-- todo check product list size, if it is 0, it always prints No product yet-->
 
-            <div th:unless="${productList.isEmpty()}"><!-- todo check product list size, if it is NOT 0, it will show the created products-->
+            <div th:unless="${productList.size()==0}"><!-- todo check product list size, if it is NOT 0, it will show the created products-->
                 <h2 class="my-5">Products</h2>
                 <table class="table table-striped table-responsive-md">
                     <thead>
@@ -34,7 +34,7 @@
                         <td th:text="${product.getPrice()}"></td><!-- todo product variables-->
                         <td th:text="${product.getRemainingQuantity()}"></td><!-- todo product variables-->
                         <td>
-                            <a th:href="@{/addToCart/{productId}/{quantity}(productId=${product.id}, quantity=${product.remainingQuantity})}" class="btn btn-primary">Add Cart<i></i></a> <!-- todo a href with two path variables-->
+                            <a th:href="@{/addToCart/{productId}/{quantity}(productId=${product.getId()}, quantity=${product.remainingQuantity})}" class="btn btn-primary">Add Cart<i></i></a> <!-- todo a href with two path variables-->
                         </td>
                     </tr>
                     </tbody>
